--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,6 +11,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - run: mkdir build && cd build
-    - run: ../bleeding-edge-toolchain/build-bleeding-edge-toolchain.sh --skip-documentation --enable-win64
-      working-directory: build
+    - run: |
+        mkdir build && cd build
+        ../bleeding-edge-toolchain/build-bleeding-edge-toolchain.sh --skip-documentation --enable-win64
