--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,4 +13,4 @@ jobs:
     - uses: actions/checkout@v1
     - run: |
         mkdir build && cd build
-        ../build-bleeding-edge-toolchain.sh --skip-documentation --enable-win64
+        TERM=xterm-256color ../build-bleeding-edge-toolchain.sh --skip-documentation --enable-win64
