--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,12 +21,29 @@ jobs:
       run: |
         mkdir build && cd build
         TERM=xterm-256color ../build-bleeding-edge-toolchain.sh --skip-documentation --enable-win64
-    - uses: actions/upload-artifact@v1
-      with:
-        name: native
-        path: build/installNative
 
-    - uses: actions/upload-artifact@v1
+    - run: echo "::set-env name=DATE::$(date '+%y%m%d')"
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # provided by Actions
       with:
-        name: win64
-        path: build/installWin64
+        tag_name: v$DATE
+        release_name: v$DATE
+    - uses: actions/upload-release-asset@v1.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: build/arm-none-eabi-gcc-$DATE.tar.xz
+        asset_name: arm-none-eabi-gcc.tar.xz
+        asset_content_type: application/x-xz
+    - uses: actions/upload-release-asset@v1.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: build/installWin64/arm-none-eabi-gcc-$DATE-win64.7z
+        asset_name: arm-none-eabi-gcc.7z
+        asset_content_type: application/x-7z-compressed
