--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -71,6 +71,7 @@ jobs:
         asset_content_type: application/x-7z-compressed
 
   testrelease:
+    needs: deploy
     runs-on: ubuntu-latest
 
     steps:
@@ -88,5 +89,5 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: test.txt
-        asset_name: arm-none-eabi-gcc.tar.xz
-        asset_content_type: application/x-xz
+        asset_name: test.txt
+        asset_content_type: application/text
