--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,6 +14,7 @@ jobs:
     - uses: Trass3r/setup-cpp@master
     - name: prerequisites
       run: |
+        sudo add-apt-repository ppa:cybermax-dexter/mingw-w64-backport
         sudo apt update
         sudo apt install -y g++-9 bison flex g++-mingw-w64-x86-64 p7zip texinfo
         sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 900 --slave /usr/bin/g++ g++ /usr/bin/g++-9
